- Push to Github

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="preloader">
-    <figure> <img src="assets/wp-content/uploads/2022/06/loader-footer-night.png" alt="Image"> </figure>
+    <figure>
+        <!-- <img src="assets/wp-content/uploads/2022/06/loader-footer-night.png" alt="Image">  -->
+        Bavandi Entertainment
+    </figure>
 </div>
 <div class="page-transition"></div>
 
