--- a/src/app/core/components/navs/footer/footer.component.html
+++ b/src/app/core/components/navs/footer/footer.component.html
@@ -7,10 +7,11 @@
                         src="assets/wp-content/uploads/2022/06/logo-footer-night.png" alt="Image"> </div>
                 <!-- end logo -->
                 <div class="footer-info wow animated fadeInUp animated" data-wow-delay="0.5s">
-                    <p><i class="flaticon-pin iconpfooter1 "></i>Malindi Central, Kenya</p>
-                    <p class="fic"><i class="flaticon-call iconpfooter2 "></i>&nbsp;&nbsp;&nbsp;+1 (234) 567 89 10</p>
+                    <p (click)="redirectToMaps()"><i class="flaticon-pin iconpfooter1 "></i>Malindi Central, Kenya</p>
+                    <p class="fic" onclick="location.href='tel:+123456789';"><i class="flaticon-call iconpfooter2 "
+                        ></i>&nbsp;&nbsp;&nbsp;+1 (234) 567 89 10</p>
                     <br>
-                    <p><i class="flaticon-email iconpfooter3 "></i>&nbsp;&nbsp;&nbsp;info@bavandi.com</p><br>
+                    <p onclick="location.href='mailto:info@bavandi.com';"><i class="flaticon-email iconpfooter3 "></i>&nbsp;&nbsp;&nbsp;info@bavandi.com</p><br>
                 </div>
                 <!-- end footer-info -->
                 <ul class="footer-social wow animated fadeInUp animated" data-wow-delay="0.5s">
