--- a/src/app/core/components/navs/navbar/navbar.component.html
+++ b/src/app/core/components/navs/navbar/navbar.component.html
@@ -1,8 +1,15 @@
 <aside class="side-widget">
     <div class="inner">
         <!-- Logo Menu Mobile -->
-        <div class="logo"> <a routerLink="/"><img src="assets/wp-content/uploads/2022/06/loader-footer-night.png"
-                    alt="Image"></a> </div>
+        <div class="logo"> <a routerLink="/" style="
+            /* height: 5px; */
+            font-weight: 900;
+            font-size: 25px;
+        ">
+                <!-- <img src="assets/wp-content/uploads/2022/06/loader-footer-night.png"
+                    alt="Image"> -->
+                Bavandi Entertainment
+            </a> </div>
         <div class="hide-mobile">
             <div class="or">
                 <h2 class="h2-baslik-hizmetler-2"> Contact Information </h2>
@@ -131,9 +138,13 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
         <!-- Logo Menu Desktop -->
-        <div class="logo"> <a routerLink="/">
-                <img src="assets/wp-content/uploads/2022/06/logo-night-bird.png" alt="Image">
-
+        <div class="logo"> <a routerLink="/" style="
+            /* height: 5px; */
+            font-weight: 900;
+            font-size: 25px;
+        ">
+                <!-- <img src="assets/wp-content/uploads/2022/06/logo-night-bird.png" alt="Image"> -->
+                Bavandi Entertainment
             </a>
         </div>
 
@@ -207,8 +218,8 @@
         </div>
         <div class="hamburger-menu"> <span></span> <span></span> <span></span> </div>
         <div class="navbar-button">
-            <div class="telh" (click)="navigateTo('events')"
-                style="cursor:pointer;"><i class="flaticon-timetable iconp"></i>&nbsp;&nbsp;&nbsp;Upcoming Events →
+            <div class="telh" (click)="navigateTo('events')" style="cursor:pointer;"><i
+                    class="flaticon-timetable iconp"></i>&nbsp;&nbsp;&nbsp;Upcoming Events →
             </div>
         </div>
     </div>
