--- a/src/app/dance-party/dance-party.component.html
+++ b/src/app/dance-party/dance-party.component.html
@@ -1,9 +1,9 @@
 <header class="page-header"
-    data-background="https://garantiwebtasarim.com/wordpress/nightbird/wp-content/uploads/2022/06/pageheader-club.jpg">
+    data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>Dance Party</h2>
         <div class="bosluk3"></div>
-        <p><a href="https://garantiwebtasarim.com/wordpress/nightbird/" class="headerbreadcrumb">Home</a> <i
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i
                 class="flaticon-right-chevron"></i> <a routerLink="/events" class="headerbreadcrumb">Events</a> <i
                 class="flaticon-right-chevron"></i>Dance Party</p>
     </div>
@@ -27,7 +27,7 @@
                                         <div class="wpem-single-event-slider-wrapper">
                                             <div class="wpem-single-event-slider">
                                                 <div class="wpem-slider-items">
-                                                    <img src="http://garantiwebtasarim.com/wordpress/nightbird/wp-content/uploads/2022/06/event-club-5.jpg"
+                                                    <img src="assets/wp-content/uploads/2022/06/event-club-5.jpg"
                                                         alt="Dance Party" />
                                                 </div>
                                             </div>
@@ -50,9 +50,9 @@
                                                 <div class="wpem-event-organizer">
                                                     <div class="wpem-event-organizer-name">
                                                         by <a
-                                                            href="https://garantiwebtasarim.com/wordpress/nightbird/event-organizer/emily-duke/">Emily
+                                                            routerLink="/event-organizer/emily-duke">Emily
                                                             Duke</a>, <a
-                                                            href="https://garantiwebtasarim.com/wordpress/nightbird/event-organizer/robert-lee/">Robert
+                                                            routerLink="/event-organizer/robert-lee">Robert
                                                             Lee</a> </div>
                                                 </div>
 
@@ -130,14 +130,14 @@
                                                 <div class="clearfix">&nbsp;</div>
                                                 <h3 class="wpem-heading-text">Event Types</h3>
                                                 <div class="wpem-event-type"><a
-                                                        href="https://garantiwebtasarim.com/wordpress/nightbird/event_listing_type/night-life/"><span
+                                                        routerLink="/event_listing_type/night-life"><span
                                                             class="wpem-event-type-text event-type night-life ">Night
                                                             Life</span></a></div>
 
                                                 <div class="clearfix">&nbsp;</div>
                                                 <h3 class="wpem-heading-text">Event Category</h3>
                                                 <div class="wpem-event-category"><a
-                                                        href="https://garantiwebtasarim.com/wordpress/nightbird/event_listing_category/maweni/"><span
+                                                        routerLink="/event_listing_category/maweni"><span
                                                             class="wpem-event-category-text event-category maweni ">Maweni</span></a>
                                                 </div>
 
@@ -228,7 +228,7 @@
                                                                 <div class="wpem-organizer-logo-wrapper">
                                                                     <div class="wpem-organizer-logo"><a><img
                                                                                 class="organizer_logo"
-                                                                                src="https://garantiwebtasarim.com/wordpress/nightbird/wp-content/uploads/2022/06/organizator-club-3.jpg"
+                                                                                src="assets/wp-content/uploads/2022/06/organizator-club-3.jpg"
                                                                                 alt="Emily Duke" /></a></div>
                                                                 </div>
                                                             </div>
@@ -280,7 +280,7 @@
 
                                                                 <div class="wpem-organizer-contact-actions">
                                                                     <div class="wpem-organizer-page-url-button"><a
-                                                                            href="https://garantiwebtasarim.com/wordpress/nightbird/event-organizer/emily-duke/"
+                                                                            routerLink="/event-organizer/emily-duke"
                                                                             class="wpem-theme-button"><span>More
                                                                                 info</span></a></div>
                                                                 </div>
@@ -298,7 +298,7 @@
                                                                 <div class="wpem-organizer-logo-wrapper">
                                                                     <div class="wpem-organizer-logo"><a><img
                                                                                 class="organizer_logo"
-                                                                                src="https://garantiwebtasarim.com/wordpress/nightbird/wp-content/uploads/2022/06/organizator-club-1.jpg"
+                                                                                src="assets/wp-content/uploads/2022/06/organizator-club-1.jpg"
                                                                                 alt="Robert Lee" /></a></div>
                                                                 </div>
                                                             </div>
@@ -350,7 +350,7 @@
 
                                                                 <div class="wpem-organizer-contact-actions">
                                                                     <div class="wpem-organizer-page-url-button"><a
-                                                                            href="https://garantiwebtasarim.com/wordpress/nightbird/event-organizer/robert-lee/"
+                                                                            routerLink="/event-organizer/robert-lee"
                                                                             class="wpem-theme-button"><span>More
                                                                                 info</span></a></div>
                                                                 </div>
