--- a/src/app/core/components/navs/footer/footer.component.html
+++ b/src/app/core/components/navs/footer/footer.component.html
@@ -3,15 +3,20 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-3 col-lg-4">
-                <div class="logo wow animated fadeInUp animated" data-wow-delay="0.5s"> <img
-                        src="assets/wp-content/uploads/2022/06/logo-footer-night.png" alt="Image"> </div>
+                <div class="logo wow animated fadeInUp animated" data-wow-delay="0.5s">
+                    <!-- <img
+                        src="assets/wp-content/uploads/2022/06/logo-footer-night.png" alt="Image"> -->
+                    <a routerLink="/" style="/* height: 5px; */
+            font-weight: 900; font-size: 25px;"> Bavandi Entertainment </a>
+                </div>
                 <!-- end logo -->
                 <div class="footer-info wow animated fadeInUp animated" data-wow-delay="0.5s">
                     <p (click)="redirectToMaps()"><i class="flaticon-pin iconpfooter1 "></i>Malindi Central, Kenya</p>
-                    <p class="fic" onclick="location.href='tel:+123456789';"><i class="flaticon-call iconpfooter2 "
-                        ></i>&nbsp;&nbsp;&nbsp;+1 (234) 567 89 10</p>
+                    <p class="fic" onclick="location.href='tel:+123456789';"><i
+                            class="flaticon-call iconpfooter2 "></i>&nbsp;&nbsp;&nbsp;+1 (234) 567 89 10</p>
                     <br>
-                    <p onclick="location.href='mailto:info@bavandi.com';"><i class="flaticon-email iconpfooter3 "></i>&nbsp;&nbsp;&nbsp;info@bavandi.com</p><br>
+                    <p onclick="location.href='mailto:info@bavandi.com';"><i
+                            class="flaticon-email iconpfooter3 "></i>&nbsp;&nbsp;&nbsp;info@bavandi.com</p><br>
                 </div>
                 <!-- end footer-info -->
                 <ul class="footer-social wow animated fadeInUp animated" data-wow-delay="0.5s">
@@ -35,8 +40,7 @@
                         <p role="status" aria-live="polite" aria-atomic="true"></p>
                         <ul></ul>
                     </div>
-                    <form class="wpcf7-form init"
-                        aria-label="Contact form"  data-status="init">
+                    <form class="wpcf7-form init" aria-label="Contact form" data-status="init">
                         <!-- <div style="display: none;">
                             <input type="hidden" name="_wpcf7" value="766" />
                             <input type="hidden" name="_wpcf7_version" value="5.7.4" />
